<?xml version="1.0" encoding="utf-8"?>


<layout>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-black"
        android:src="@drawable/ic_logosvg"
        android:textSize="32dp"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_matricula"
        android:layout_marginVertical="60dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/matricula"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_senha"
        android:layout_marginVertical="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_matricula"
        app:layout_constraintWidth_percent="0.4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="60dp"
        android:backgroundTint="#00a651"
        android:text="@string/confirmar"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_senha"
        app:layout_constraintWidth_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

</layout>