<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_box"
        android:layout_width="124dp"
        android:layout_height="34dp"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-black"
        android:text="BOX: box"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/insira_o_n_mero_de_caixas_no_pallet"
        android:textAlignment="center"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/txt_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.9"
        android:hint="@string/insira_aqui"
        android:layout_marginTop="32dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirmar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmar"
        app:layout_constraintWidth_percent="0.9"
        app:cornerRadius="8dp"
       android:layout_marginVertical="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#00a651"
        app:layout_constraintTop_toBottomOf="@id/txt_input"/>


</androidx.constraintlayout.widget.ConstraintLayout>